...
                </VStack>
              </HStack>

              <HStack space="md" className="items-center">
                <User size={META_ICON_SIZE} color={Colors.primary} />
                <VStack className="flex-1">
                  <Text className="text-xs text-[#A5A0AE] font-bold uppercase">Responsável</Text>
                  <Text className="text-[#1B1725] font-medium">{task.assignee?.name || 'Sem responsável'}</Text>
                </VStack>
              </HStack>

              <HStack space="md" className="items-center">
                <Zap size={META_ICON_SIZE} color="#F6B51E" fill="#F6B51E" />
...
